Time: 2 ms (82.86%), Space: 44.9 MB (30.86%) - LeetHub